Added save button

--- a/BACLevelCalculator/app/src/main/res/values/strings.xml
+++ b/BACLevelCalculator/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="genderText">Gender</string>
     <string name="maleText">M</string>
     <string name="femaleText">F</string>
+    <string name="saveButtonText">Save</string>
 </resources>
