--- a/BACLevelCalculator/app/src/main/res/values/strings.xml
+++ b/BACLevelCalculator/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="oneOzText">1 oz</string>
     <string name="fiveOzText">5 oz</string>
     <string name="twelveOzText">12 oz</string>
+    <string name="alcPercentText">Alcohol %</string>
+    <string name="alcPercent">0%</string>
+    <string name="addDrinkButtonText">Add Drink</string>
+    <string name="resetButtonText">Reset</string>
+    <string name="bacLabelText">BAC Level:</string>
+    <string name="bacLevelText">0.00</string>
+    <string name="statusLabelText">Your Status:</string>>
+
 </resources>
